Changelog Legend:
----

[+] = Added
[*] = Changed
[^] = Moved
[=] = No Changes
[x] = Deleted
[!] = Bugs

(03/27/20) = Improvement - Version 4.2.3
[*] = Fix - Coupon code is not working on Checkout page
[*] = Fix - Language translations - German
[*] = Added - Added accessibility ready support.

(03/24/20) = Improvement - Version 4.2.2
[*] = Fix - Option to edit footer copyright text

(03/20/20) = Improvement - Version 4.2.1
[*] = Fix - Improved Screnshot
[*] = Deleted - Google Plus link option

(03/18/20) = Improvement - Version 4.2.0
[*] = Fix - Schema.org compatibility
[*] = Added - Image Licenses

(03/16/20) = Improvement - Version 4.1.9
[*] = Fix - Schema.org compatibility

(03/12/20) = Improvement - Version 4.1.8
[*] = Added - Language Translations
[x] = Deleted - Removed redundant code from theme.

(03/12/20) = Improvement - Version 4.1.7
[x] = Deleted - Removed redundant code from theme.
[*] = Added - License for the Images and third party scripts
[*] = Added - Translation Support

(03/03/20) = Changed - Version 4.1.6
[x] = Deleted - Removed redundant code from theme.
[!] = Fixed - Compatibility with Mega Menu plugin.

(03/03/20) = Changed - Version 4.1.5
[*] = Changed - Added translations for theme options page
[*] = Changed - Updated copyrights
[*] = Added - Option to add script in header and footer

(03/03/20) = Changed - Version 4.1.4
[*] = Changed - Improved style.css

(02/03/20) = Changed - Version 4.1.3
[*] = Changed - Improved style.css

(02/03/20) = Changed - Version 4.1.2
[*] = Changed - Improved style.css

(02/03/20) = Changed - Version 4.1.1
[*] = Changed - Improved Readme

(02/03/20) = Changed - Version 4.1.0
[+] = Added - Option to control content width of Single Page, Blog Page and Cart Page.
[+] = Added - Option to add menu toggle button in desktop by increasing width of Mobile Menu Breakpoint.
[+] = Added - Compatibility with latest Elementor.
[+] = Added - Option to add WooCommerce mini cart in menu.