@@ -1,7 +1,7 @@
 /**
  * Theme name:	Responsive
- * Version:		4.2.3
- * Theme URI:	https://cyberchimps.com/repsonsive/
+ * Version:		4.2.4
+ * Theme URI:	https://cyberchimps.com/responsive/
  * Author:		CyberChimps
  * Author URI:	https://cyberchimps.com
  * Description:	Responsive is a fully customizable, search engine optimized & mobile-friendly WordPress theme. Compatible with the Gutenberg block editor, it is a perfect choice for your blog, business website, or WooCommerce store. With almost unlimited customizer options, you can customize every feature of your website. Responsive comes with minified scripts to improve website speed. It also comes with other features including - nine layout options for pages and blog, WooCommerce design options, and compatibility with the Elementor page builder. It works great on a mobile, tablet, desktop, and across all browsers. Responsive is also available in 45 languages and is search engine friendly. See Responsive in action: https://cyberchimps.com/responsive-ready-websites/. Learn more about its features: https://cyberchimps.com/responsive-features/.
