@@ -8,6 +8,10 @@ Changelog Legend:
 [x] = Deleted
 [!] = Bugs
 
+(03/30/20) = Improvement - Version 4.2.4
+[*] = Fix - Theme Homepage link
+[*] = Fix - Homepage featured section renders html
+
 (03/27/20) = Improvement - Version 4.2.3
 [*] = Fix - Coupon code is not working on Checkout page
 [*] = Fix - Language translations - German
